adding pipeline factory and preliminary imgui drawables

--- a/tests/resources/glsl/glsl.qrc
+++ b/tests/resources/glsl/glsl.qrc
@@ -1,6 +1,7 @@
 <!DOCTYPE RCC><RCC version="1.0">
 <qresource prefix="/tests/glsl">
     <file>triangle.vert</file>
+    <file>input_vertex.vert</file>
     <file>triangle.frag</file>
 </qresource>
 </RCC>
